src/objects/Data_Dictionary__c.object
<CustomObject>
    <description>Object that stores information on org&apos;s fields</description>
    <fields>
        <fullName>Check_Access__c</fullName>
        <formula>HYPERLINK(&quot;/apex/DataDictionaryFieldDetails?refId=&quot; &amp; Object_API__c &amp; &quot;&amp;fId=&quot; &amp;Object_API__c &amp; &quot;.&quot; &amp; Field_API__c, &quot;Check Access&quot;,&quot;_blank&quot;)</formula>
        <label>Check Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomFieldId__c</fullName>
        <description>The enum (for example, Account) or ID of the object this field is on.</description>
        <externalId>true</externalId>
        <inlineHelpText>The enum (for example, Account) or ID of the object this field is on.</inlineHelpText>
        <label>CustomFieldId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API__c</fullName>
        <description>Field API</description>
        <inlineHelpText>Field API</inlineHelpText>
        <label>Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Description__c</fullName>
        <description>Field Description</description>
        <inlineHelpText>Field Description</inlineHelpText>
        <label>Field Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Details__c</fullName>
        <description>Detailed Information about the field</description>
        <inlineHelpText>Detailed Information about the field</inlineHelpText>
        <label>Field Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <description>Field Label</description>
        <inlineHelpText>Field Label</inlineHelpText>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <description>Field Type: Boolean, Picklist, Reference, Text, etc</description>
        <inlineHelpText>Field Type: Boolean, Picklist, Reference, Text, etc</inlineHelpText>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <description>Help Text from getDescribe</description>
        <inlineHelpText>Help Text from getDescribe</inlineHelpText>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectFieldAPI__c</fullName>
        <description>Full API name : Object.prefix+developerName+__c</description>
        <externalId>true</externalId>
        <inlineHelpText>Full API name : Object.prefix+developerName+__c</inlineHelpText>
        <label>ObjectFieldAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API__c</fullName>
        <description>Object API Name</description>
        <inlineHelpText>Object API Name</inlineHelpText>
        <label>Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Object Name</description>
        <inlineHelpText>Object Name</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TableEnumORId__c</fullName>
        <description>Object Name</description>
        <inlineHelpText>Object Name</inlineHelpText>
        <label>TableEnumORId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Dictionary</label>
    <nameField>
        <displayFormat>DT-{0000000}</displayFormat>
        <label>Data dictionary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Dictionary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>